--- a/src/app/employee/index.html
+++ b/src/app/employee/index.html
@@ -15,3 +15,7 @@
 <h1>employee home</h1>
 
 <h2>Msg: {{employeeCtrl.message}}</h2>
+
+<pre>{{employeeCtrl.expenses}}</pre>
+Datatable:
+<datatable data="employeeCtrl.expenses"></datatable>
